# embed_python

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  embed_pythonLib.py
cmt/: requirements
doc/: release.notes
embed_python/: Module.h
python/: Test.py  embed_python_Test.py
src/: Module.cxx  mainpage.h
src/test/: runPy.cxx
